[css-grid] Use min-content size for intrinsic maximums resolution https://bugs.webkit.org/show_bug.cgi?id=216142

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Import WPT test.

* web-platform-tests/css/css-grid/layout-algorithm/grid-intrinsic-track-sizes-001-expected.txt: Added.
* web-platform-tests/css/css-grid/layout-algorithm/grid-intrinsic-track-sizes-001.html: Added.
* web-platform-tests/css/css-grid/layout-algorithm/w3c-import.log:

Source/WebCore:

By mistake the specification used to say that, for items spanning
multiple tracks, the growth limits of the tracks with an intrinsic max
track sizing function should grow to accommodate the minimum
contribution of the item.

But this was a mistake, because an intrinsic max track sizing function
can only be min-content or max-content. So instead of distributing the
minimum contribution, it should be the min-content contribution.

The spec has been fixed and there is a CSSWG resolution in
https://github.com/w3c/csswg-drafts/issues/4790

This patch fixes the problem by reverting r207290. The change is likely
web compatible, since it only affects a rare edge case with 'minmax()'
where the min sizing function is 'auto' or a fixed value smaller than
the min-content contribution, the max sizing function is 'min-content',
and an item whose minimum contribution is forced to be different than
the min-content contribution, and spans multiple tracks.

This is a port of https://crrev.com/803871 from Chromium.

Tests: fast/css-grid-layout/grid-intrinsic-maximums.html
       imported/w3c/web-platform-tests/css/css-grid/layout-algorithm/grid-intrinsic-track-sizes-001.html

* rendering/GridTrackSizingAlgorithm.cpp:
(WebCore::GridTrackSizingAlgorithm::itemSizeForTrackSizeComputationPhase const):

LayoutTests:

Update test expectations. Some are wrong due to bug 216144.

* fast/css-grid-layout/grid-intrinsic-maximums-expected.html:


Canonical link: https://commits.webkit.org/229044@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266675 268f45cc-cd09-0410-ab3c-d52691b4dbfc